# civetweb

./: CMakeLists.txt  LICENSE.md  Makefile
VisualStudio/: civetweb.sln
VisualStudio/civetweb_yassl/civetweb_yassl/: civetweb_yassl.vcxproj
VisualStudio/civetweb_yassl/yassl_lib/: yassl_lib.vcxproj
VisualStudio/ex_embedded_c/: ex_embedded_c.vcxproj  ex_embedded_c.vcxproj.filters
VisualStudio/unit_test/: unit_test.vcxproj
docs/: UserManual.md
examples/embedded_c/: embedded_c.c
include/: civetweb.h  civetweb_util.h
platform/: civetweb_platform.h
platform/unix/: civetweb_platform_unix.c  civetweb_platform_unix.h
platform/win/: civetweb_platform_win.c  civetweb_platform_win.h
src/: CMakeLists.txt  civetweb.c  civetweb_util.c
